css/grid.css
@media only screen and (max-width: 1200px)  {
  .flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 75%;
    margin: 0 auto;
  }
  .sidenav {
    height: 100%;
    width: 0%;
    position: fixed;
    z-index: 999;
    top: 0;
    left: 0;
    background: #eb7859;
    overflow: hidden;
    transition: 0.5s;
  }
  #close {
    background: none;
    color: #FFFFFF;
    padding-left: 0;
    font-size: 34pt;
    text-align: right;
    cursor: pointer;
  }
  .sidenav a {
    color: #FFFFFF;
    width: 100%;
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    display: block;
    transition: 0.3s;
    float: none;
    text-align: left;
  }
  .sidenav a:hover {
    background: #FFFFFF81;
  }
  .sidenav .active::before {
    background-image: url('../img/navpaw.svg');
    background-size: 25px 20px;
    background-repeat: no-repeat;
    background-position: bottom;
    display: inline-block;
    width: 25px;
    height: 25px;
    content:"";
  }
  .sidenav a:hover::before {
    background-image: url('../img/navpaw.svg');
    background-size: 25px 20px;
    background-repeat: no-repeat;
    background-position: bottom;
    display: inline-block;
    width: 25px;
    height: 25px;
    content:"";
  }
  .logo {
    grid-area: logo;
    width: 45%;
    margin: auto;
  }
  .desk-nav {display: none;}
  .mob-nav {
    grid-area: nav;
    color: #FFFFFF;
    font-size: 15vw;
    cursor: pointer;
  }
  .headtitle {grid-area: title;}
  .headtag {grid-area: tag;}
  .adddog {grid-area: dog;}
  .call {display: none;}
  .callmob {
    grid-area: call;
    margin-top: 30%;
    height: 15vw;
    width: 15vw;
    animation: bounce 1s infinite;
    z-index: 1;
  }
  .headgrid{
    display: grid;
    grid-template-columns: 15% 70% 15%;
    grid-template-areas: "call logo nav"
                        "title title title"
                        "tag tag tag ";
    padding: 1em;
    text-align: center;
  }
  .adddog {
    display:none;
  }
  .indextitle {grid-area: title;}
  .indextext {grid-area: text;}
  .locations {grid-area: loc;}
  .opentime {grid-area: times;}
  .index1grid {
    display: grid;
    grid-template-columns: 74% 25%;
    grid-template-areas:
      "title title"
      "text text"
      "loc loc"
      "times times";
    grid-gap: 1em;
    padding: 0em 3em 3em 3em;
    width: 75%;
    margin: 0 auto;
  }
  .offers {
    height: 7em;
    width: 100%;
  }
  .offers h1 {
    margin: 1em;
    font-size: 18pt;
    text-align: center;
  }
  .quote {
    display: none;
  }
  .index2 h2:nth-child(1) {grid-area: title;}
  .index2 a:nth-child(2) {grid-area: service1;}
  .index2 a:nth-child(3) {grid-area: service2;}
  .index2 a:nth-child(4) {grid-area: service3;}
  .index2 section:nth-child(5) {
    grid-area: text;
    width: 100%;
  }
  .index2 {
    display: grid;
    grid-template-columns: 100%;
    grid-template-areas: "title" "service1" "service2" "service3" "text";
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
    width: 75vw;
    margin: 0 auto;
    text-align: center;
  }
  .left {
    grid-area: left;
  }
  .left p {
    text-align: center;
  }
  .footerlogo {grid-area: mid;}
  .right {
    grid-area: right;
    text-align: center;
  }
  .right ul li {
    text-align: left;
    margin-left: 25%;
  }
  footer {
    display: grid;
    grid-template-columns: 100%;
    grid-template-areas:
      "left"
      "right"
      "mid";
      grid-gap: 1em;
      width: 100%;
      background: black;
      color: white;
      text-align:
  }
  .lori {grid-area: lori;}
  .gary { grid-area: gary;}
  .rebecca { grid-area: rebecca;}
  .joanna { grid-area: joanna;}
  .lor {grid-area: lorin;}
  .gar {grid-area: garyn;}
  .reb {grid-area: rebeccan;}
  .joa {grid-area: joannan;}
  .desk{ display: none;}
  .mobile {
    font-size: 18pt;
    text-align: left;
    background: #eb7859;
    padding: 5px;
    width: 150px;
    filter: drop-shadow(8px 8px 8px gray);
  }
  .teamsection {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 95vw;
    display: grid;
    grid-template-columns: 150px 150px;
    grid-template-rows: 150px auto 150px auto;
    grid-template-areas: "lori gary" "lorin garyn" "rebecca joanna" "rebeccan joannan";
    grid-gap: 1em;
    padding-left: 7%;
  }
  .teamlist {
    width: 0;
  }
  .team {
    width: 150px;
    height: 150px;
  }
  .service {
    height: 130px;
    width: 90%;
    transition: all 0.5s ease;
    position: relative;
    background-size: 120%;
    background-position: right;
    margin-top: 1em;
    cursor: url(../img/1x/asset.png), pointer;
    filter: drop-shadow(2px 15px 10px gray);
    z-index: 1;
  }
  .service h1{
    color: #FFFFFF;
    position: absolute;
    font-size: 20pt;
    margin: 1em 0em 0em 0em;
  }
}
@media only screen and (min-width: 1201px) {
  article {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
  }
  .index1{
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
  }
  .sidenav {display:none;}
  .desk-nav { grid-area: nav; }
  .mob-nav { display: none;}
  .logo { grid-area: logo;}
  .headtitle {grid-area: title;}
  .headtag {grid-area: tag;}
  .adddog {grid-area: dog;}
  .call {grid-area: call;}
  .callmob {display: none;}
  .headgrid {
    display: grid;
    grid-template-columns: 10% 45% 25% 20%;
    grid-template-areas: "logo nav nav call"
                          "title title dog dog"
                          "tag tag dog dog";
    grid-gap: 1em;
    padding: 3em;
    margin: 0 auto;
    width: 80%;
  }

  .indextitle {grid-area: title;}
  .indextext {grid-area: text;}
  .locations {grid-area: loc;}
  .opentime {grid-area: times;}
  .index1grid {
    display: grid;
    grid-template-columns: 74% 25%;
    grid-template-areas:
      "title title"
      "text loc"
      "text times";
    grid-gap: 1em;
    padding: 0em 3em 3em 3em;
    width: 90em;
  }

  .index2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
  }

  .left {grid-area: left;}
  .footerlogo {grid-area: mid;}
  .right {grid-area: right;}
  footer {
    display: grid;
    grid-template-columns: 33.3%;
    grid-template-areas:
      "left mid right";
      grid-gap: 1em;
      width: 100%;
      background: black;
      color: white;
  }
  .teamsection {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 80%;
  }
  .flex {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 75%;
  }
  .manc {grid-area: Manc;}
  .macc {grid-area: Macc;}
  .southport {grid-area: South;}
  .warrington {grid-area: Warr;}
  .locgrid {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-areas: "Manc Macc" "South Warr";
    grid-gap: 4em;
    width: 100%
  }

 .mobile {display: none;}
}


/* .logo {
  grid-column: 2;
  grid-row: 1;
}
.nav {
  grid-area: nav;
}
.title {
  grid-area: Title;
  color: #FFFFFF;
  font-family: 'Montserrat', sans-serif;
}
.tag {
  grid-area: Tag;
  color: #FFFFFF;
  font-family: 'Montserrat', sans-serif;
  padding-bottom: 10px;
}
.dog {
  grid-area: dog;
  width: 30em;
}
.headergrid {
  display: grid;
  grid-template-rows: auto 50px auto;
  grid-template-columns: 10em auto auto auto 10em;
  grid-template-rows: 33.3% 33.3% 33.3%;
  grid-template-areas: ". logo nav nav nav ."
                       ". Title Title dog dog ."
                       ". Tag Tag . . .";
  grid-gap: 10px;
  padding: 3em;
  height: 50vh;
}


.heading { grid-area: heading;}
.paragraph { grid-area: content;}
.locations { grid-area: locations;}
.times { grid-area: times;}
.heading2 { grid-area: title;}
.sitting { grid-area: sitting;}
.sittingprice { grid-area: sittingprice;}
.smallpet { grid-area: visits;}
.smallpetprice { grid-area: visitsprice;}
.overnight { grid-area: overnight;}
.lastpar { grid-area: content2;}
.grid {
  display: grid;
  grid-template-areas: "heading ."
                       "content locations"
                       "content times"
                       "title title"
                       "sitting sittingprice"
                       "visits visitsprice"
                       "overnight overnightprice"
                       "content2 content2";
  grid-template-columns: 50% 50%;
  width: 80%;
  margin: 0 auto;
} */

